# gogo_lemmatizer

./: .gitignore  AUTHORS  Makefile.am  Makefile.in  NEWS  README  README.md  check_graphan.sh  compile_ross.sh  configure.ac  configure.in  gen_graphan_bin.sh  readme  rml.ini
Dicts/Morph/: ggramtab.tab  rgramtab.tab
Dicts/SrcMorph/: Rus.mwz
Docs/: Graphan.htm  Morph_UNIX.txt
Source/AgramtabLib/: EngGramTab.cpp  EngGramTab.h  GerGramTab.cpp  GerGramTab.h  Makefile  Makefile.am  RusGramTab.cpp  RusGramTab.h  StdGramtab.cpp  StdGramtab.h  agramtab_.cpp  agramtab_.h  eng_consts.h  morph_const.h  rus_consts.h
Source/FileLem/: Makefile
Source/GraphanLib/: C_desc.cpp  Consent.cpp  Consent.h  Cs_hiera.cpp  Descriptors.h  FindDic.cpp  FindDic.h  GraphanDicts.cpp  GraphanDicts.h  GraphmatFile.cpp  GraphmatFile.h  HTMLConv.h  HtmlConv.cpp  Makefile  Makefile.am  Nc_desc.cpp  Oborots.cpp  Sentences.cpp  StdGraph.h  UnitHolder.cpp  UnitHolder.h  WordDelims.cpp  Writegra.cpp  abbrev.cpp  abbrev.h  graline.cpp  graline.h
Source/GraphmatThick/: GraphmatThick.cpp  Makefile
Source/Interfaces/c/: Makefile  Makefile.am  clemmatiser.cpp  clemmatiser.h
Source/Interfaces/cpp/: CMorphology.cpp  CMorphology.hpp  LemInterface.cpp  LemInterface.hpp  Makefile  Makefile.am  SimpleLemmatiser.cpp  SimpleLemmatiser.hpp  converts.cpp  main.cpp  test_cpp  utf_cp.cpp  utf_cp.hpp
Source/LemmatizerLib/: CreatePredictionBase.cpp  Lemmatizers.cpp  Lemmatizers.h  Makefile  Makefile.am  MorphAutomBuilder.cpp  MorphAutomBuilder.h  MorphAutomat.cpp  MorphAutomat.h  MorphDict.cpp  MorphDict.h  MorphDictBuilder.cpp  PLMLineCollection.cpp  PLMLineCollection.h  Paradigm.cpp  Paradigm.h  Predict.cpp  Predict.h  StaticVectorMap.h  Statistic.cpp
Source/MorphGen/: Makefile  Makefile.am  MorphGen  MorphGen.cpp
Source/MorphWizardLib/: FormInfo.h  Makefile  Makefile.am  wizard.cpp  wizard.h
Source/PCRE/: internal.h  pcre.cpp  pcre.h  pcre_rml.h  pcredemo.cpp
Source/RegressionTest/: Makefile  Makefile.am  RegressionTest  main.cpp
Source/StructDictLib/: ItemsContainer.cpp  ItemsContainer.h  LessDomItem.h  Makefile  Makefile.am  Ross.cpp  Ross.h  Signat.h  TempArticle.cpp  TempArticle.h  TextField.h
Source/StructDictLoader/: Main.cpp  Makefile
Source/TestLem/: Makefile  Makefile.am  TestLem.cpp
Source/common/: COMSyntaxHolder.cpp  COMSyntaxHolder.h  Chunk.h  DDCInternalError.h  DwdsThesaurus.cpp  DwdsThesaurus.h  GramInfo.h  Graspace.h  MorhologyHolder.cpp  MorphologyHolder.h  PlmLine.cpp  PlmLine.h  ReadQueryFromInternet.cpp  SyntaxHolder.cpp  common_exe_mak  common_exe_mak.in  common_lib_mak.in  common_mak  common_mak.in  cortege.h  imports.h  process_flex.sed  rus_numerals.cpp  rus_numerals.h  string_socket.cpp.deprecated  string_socket.deprecated  string_tokenizer.h  util_classes.h  utilit.cpp  utilit.h
Test/: RegressionTest.out
Test/Graphan/Eng/: result.gra
Test/Graphan/Ger/: result.gra
Test/Graphan/Rus/: result.gra
Test/Morph/Eng/: result.txt
Test/Morph/Ger/: result.txt
Test/Morph/Rus/: result.txt
examples/c/: Makefile  firstform.c
examples/cpp/: Makefile  lemmatize.cpp
examples/cpp/lemmatize2/: Makefile  lemmatize2.cpp
pkgconfig/: genlist.sh  lemmatizer-dsh.pc  lemmatizer-dsh.pc.in  lemmatizer-dst.pc  lemmatizer-dst.pc.in  lemmatizer-pc.in.template  lemmatizer-rsh.pc  lemmatizer-rsh.pc.in  lemmatizer-rst.pc  lemmatizer-rst.pc.in
