ACLOCAL_AMFLAGS = -I m4.incl ${ACLOCAL_FLAGS}

#SUBDIRS = Source/AgramtabLib Source/common Source/FileLem Source/GraphanLib \
#          Source/GraphmatThick Source/Interfaces Source/LemmatizerLib Source/MorphGen \
#          Source/MorphWizardLib Source/RegressionTest Source/StructDictLib \
#          Source/StructDictLoader Source/TestLem


SUBDIRS = Source/AgramtabLib Source/GraphanLib Source/LemmatizerLib \
          Source/MorphWizardLib Source/StructDictLib \
          Source/Interfaces/cpp Source/Interfaces/c Source/MorphGen \
          Source/RegressionTest
