AC_PREREQ(2.53)
AC_INIT()

# Checks for programs.
AC_PROG_CXX

m4_include([m4.incl/ax_path_lib_pcre.m4])

AX_PATH_LIB_PCRE([], AC_MSG_ERROR([Could not find libpcre]))

AC_CHECK_FUNCS([getcwd])
AC_CHECK_FUNCS([gettimeofday])
AC_CHECK_FUNCS([localtime_r])
AC_CHECK_FUNCS([memmove])
AC_CHECK_FUNCS([memset])
AC_CHECK_FUNCS([strchr])
AC_CHECK_FUNCS([strcspn])
AC_CHECK_FUNCS([strspn])
AC_CHECK_FUNCS([strstr])
AC_CHECK_HEADERS([fcntl.h])
AC_CHECK_HEADERS([limits.h])
AC_CHECK_HEADERS([locale.h])
AC_CHECK_HEADERS([stdlib.h])
AC_CHECK_HEADERS([string.h])
AC_CHECK_HEADERS([sys/time.h])
AC_CHECK_HEADERS([sys/timeb.h])
AC_CHECK_HEADERS([unistd.h])


PREFIX=$prefix
test "x${PREFIX}" = xNONE && PREFIX=${ac_default_prefix}

RMLROOT="$PREFIX/lemmatizer"
AC_SUBST(RMLROOT)

COMPAT_DIR="/usr/lemmatizer"
AC_SUBST(COMPAT_DIR)

AC_OUTPUT( Makefile \
           Source/common/common_exe_mak \
           Source/common/common_lib_mak \
           pkgconfig/lemmatizer-rsh.pc \
           pkgconfig/lemmatizer-rst.pc \
           pkgconfig/lemmatizer-dsh.pc \
           pkgconfig/lemmatizer-dst.pc \
           pkgconfig/lemmatizer.pc \
         )

AC_MSG_NOTICE([ ])
AC_MSG_NOTICE([ "Lemmatizer will be installed to : ${RMLROOT}" ])

