lib_LTLIBRARIES = libAgramtab.la

INCLUDES = -I$(top_builddir)/Sources

libAgramtab_la_SOURCES = agramtab_.cpp agramtab_.h eng_consts.h EngGramTab.cpp EngGramTab.h \
                         ger_consts.h GerGramTab.cpp GerGramTab.h morph_const.h rus_consts.h \
                         RusGramTab.cpp RusGramTab.h StdGramtab.cpp StdGramtab.h
