lib_LTLIBRARIES = libGraphan.la

INCLUDES = -I$(top_builddir)/Sources

libGraphan_la_SOURCES = abbrev.cpp abbrev.h C_desc.cpp Consent.cpp Consent.h Cs_hiera.cpp Descriptors.h \
                        graline.cpp graline.h GraphanDicts.cpp GraphanDicts.h GraphmatFile.cpp \
                        GraphmatFile.h HtmlConv.cpp HTMLConv.h Nc_desc.cpp Oborots.cpp Sentences.cpp StdAfx.cpp \
                        StdGraph.h UnitHolder.cpp UnitHolder.h WordDelims.cpp Writegra.cpp
