lib_LTLIBRARIES = libLemmatizer.la

INCLUDES = -I$(top_builddir)/Sources

libLemmatizer_la_SOURCES = CreatePredictionBase.cpp Lemmatizers.cpp Lemmatizers.h MorphAutomat.cpp \
                           MorphAutomat.h MorphAutomBuilder.cpp MorphAutomBuilder.h MorphDictBuilder.cpp \
                           MorphDictBuilder.h MorphDict.cpp MorphDict.h Paradigm.cpp Paradigm.h PLMLineCollection.cpp \
                           PLMLineCollection.h Predict.cpp Predict.h StaticVectorMap.h Statistic.cpp \
                           Statistic.h StdMorph.cpp StdMorph.h ../common/PlmLine.cpp \
                           ../common/MorhologyHolder.cpp
