bin_PROGRAMS = MorphGen

MorphGen_SOURCES = MorphGen.cpp

MorphGen_LDADD = $(top_srcdir)/Source/LemmatizerLib/libLemmatizer.la   \
                 $(top_srcdir)/Source/AgramtabLib/libAgramtab.la       \
                 $(top_srcdir)/Source/GraphanLib/libGraphan.la         \
                 $(top_srcdir)/Source/MorphWizardLib/libMorphWizard.la \
                 $(top_srcdir)/Source/StructDictLib/libStructDict.la

