lib_LTLIBRARIES = libStructDict.la

INCLUDES = -I$(top_builddir)/Sources

libStructDict_la_SOURCES = Domen.h Field.h ItemsContainer.cpp ItemsContainer.h LessDomItem.h \
                           Ross.cpp Ross.h Signat.h StdRoss.cpp StdRoss.h StructDictConsts.h \
                           TempArticle.cpp TempArticle.h TextField.h ../common/utilit.cpp
